# voice_translate

./: .gitignore  ARCHITETTURA.md  README.md  TODO.md  analysis_options.yaml  pubspec.yaml
DA CANCELLARE/: .analysis_options.yaml  llama_wrapper.cpp
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  voice_translate_whisper_wrapper.cpp
android/app/src/main/kotlin/com/voicetranslate/voice_translate/: MainActivity.kt  NllbBackend.kt  NllbMethodChannelHandler.kt  NllbModelBundle.kt  NllbTensorUtils.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
lib/: app.dart  main.dart
lib/core/constants/: app_constants.dart  languages.dart  model_config.dart
lib/core/errors/: app_exceptions.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: logger.dart  permissions_helper.dart  speech_text_formatter.dart
lib/data/datasources/: llama_ffi.dart  nllb_platform_channel.dart  onnx_ffi.dart  whisper_ffi.dart
lib/data/repositories/: history_repository.dart  settings_repository.dart
lib/data/services/: audio_service.dart  download_service.dart  tts_service.dart
lib/domain/entities/: app_settings.dart  download_state.dart  pipeline_state.dart  translation_entry.dart
lib/presentation/providers/: app_providers.dart  download_provider.dart  history_provider.dart  pipeline_provider.dart
lib/presentation/router/: app_router.dart
lib/presentation/screens/: download_screen.dart  error_screen.dart  history_screen.dart  home_screen.dart  settings_screen.dart
lib/presentation/widgets/: download_progress_card.dart  history_chat_list.dart  history_list.dart  language_selector.dart  live_results_panel.dart  phase_indicator.dart  recording_button.dart  text_result_card.dart
